/*
Copyright 2021 The Dapr Authors
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package dapr.proto.components.v1;

import "google/protobuf/empty.proto";
import "dapr/proto/common/v1/common.proto";
import "dapr/proto/components/v1/shared.proto";

option go_package = "github.com/dapr/dapr/pkg/proto/components/v1;components";

// Interface for input bindings
service InputBinding {
  rpc Init(MetadataRequest) returns (google.protobuf.Empty) {}

  rpc Read(google.protobuf.Empty) returns (stream ReadResponse) {}

  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

service OutputBinding {
  rpc Init(MetadataRequest) returns (google.protobuf.Empty) {}

  rpc Invoke(InvokeRequest) returns (InvokeResponse) {}

  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message ReadResponse {
  bytes data = 1;
  map<string, string> metadata = 2;
  string contenttype = 3; 
}

message InvokeRequest {
  bytes data = 1;
  map<string, string> metadata = 2;
  string operation = 3; 
}

message InvokeResponse {
  bytes data = 1;
  map<string, string> metadata = 2;
  string contenttype = 3; 
}

